# TWS

./: .replit  pyproject.toml  pyrightconfig.json  replit.md
amplifi-dev/backend/app/: models.py  pyproject.toml  run_celery.py  run_celery_beat.py  run_celery_video.py  run_fastapi.py  simple_main.py  test_docling_models.py
amplifi-dev/backend/app/alembic/: env.py
amplifi-dev/backend/app/alembic/versions/: 2024-10-09-19-12_6f03916284cc.py  2024-10-13-15-06_339c236d303a.py  2024-10-15-09-22_04c0e1ee8927.py  2024-10-21-18-44_9dca50b4fd5d.py  2024-10-21-18-48_afad8004cf75.py  2024-10-23-19-17_dfc5b065a7de.py  2024-10-24-07-52_40cd2caa28ab.py  2024-11-05-04-50_c7b1365a8daa.py  2024-11-08-09-46_f4cfe0396006.py  2024-11-19-06-27_e3e0640094ff.py  2024-11-22-04-27_4faace2404b8.py  2024-11-27-05-35_dc9988dbf090.py  2024-12-05-09-05_e32e17f94e3f.py  2024-12-12-05-28_601d456fc201.py  2024-12-13-20-48_6a4ce9d49bfe.py  2024-12-14-00-02_6ad43882c662.py  2024-12-17-08-23_783e6c3310fe.py  2025-01-03-21-00_f818b8b8aae9.py  2025-01-06-20-23_2e7236ad593b.py  2025-01-16-00-34_5bbfe1a3d59f.py  2025-01-21-06-26_4b10d3d5dcc8.py  2025-01-22-10-58_4121fb6198a0.py  2025-01-23-13-31_0d983303c03f.py  2025-01-28-06-40_f7715d8aad60.py  2025-01-30-03-57_1f7dc7cc3def.py  2025-02-03-09-12_a482c8ff849c.py  2025-02-25-22-05_b9f23c1754a2.py  2025-02-27-16-46_e6669723540b.py  2025-02-28-06-07_292c9ae74ae9.py  2025-03-14-19-34_433dceb5e9e5.py  2025-03-14-21-19_e1bf06f3cc65.py  2025-03-17-07-45_3bfb31e6514e.py  2025-03-17-09-40_a8edbb71907d.py  2025-03-17-09-41_d75d91ad2b53.py  2025-03-17-10-47_f193aaae55f9.py  2025-03-18-20-54_0fe2a9a9339a.py  2025-03-21-07-27_f508fb884e52.py  2025-03-25-20-34_5898cffd9184.py  2025-03-27-11-07_227ab61e19f6.py  2025-03-28-05-12_ec7ec955a781.py  (+44 more)
amplifi-dev/backend/app/app/: main.py
amplifi-dev/backend/app/app/api/: audio_ingestion_task.py  audio_ingestion_task_v2.py  azure_blob_monitor_task.py  azure_monitor_task.py  azure_source_file_pull_task.py  celery_task.py  check_pdf_task.py  compress_pdf_task.py  deps.py  deps_no_auth.py  document_timeout_tasks.py  groove_blob_monitor_task.py  groove_monitor_task.py  groove_source_file_pull_task.py  image_ingestion_task.py  image_ingestion_task_v2.py  ingest_split_task_v2.py  ingestion_task_v2.py  kuzu_graph_extraction_task.py  mysql_source_data_pull_task.py  pg_vector_source_data_pull_task.py  prepare_split_ingestion_task.py  prepare_split_ingestion_task_v2.py  vanna_training_task.py  video_ingestion_task.py  workflow_exec_task.py
amplifi-dev/backend/app/app/be_core/: api_client_security.py  celery.py  celery_video.py  config.py  logger.py  security.py  vanna_connector_manager.py
amplifi-dev/backend/app/app/constants/: chat_constants.py
amplifi-dev/backend/app/app/crud/: __init__.py  agent_crud.py  api_client_crud.py  base_crud.py  chat_app_crud.py  chat_history_crud.py  chat_session_crud.py  chunking_config_crud.py  dataset_crud.py  dataset_crud_v2.py  destination_crud.py  document_crud.py  embeddingConfig_crud.py  extracted_entity_crud.py  file_split_crud.py  file_split_crud_v2.py  graph_crud.py  graph_extraction_crud.py  group_crud.py  hero_crud.py  image_media_crud.py  ingest_crud.py  ingest_crud_v2.py  log_crud.py  organization_crud.py  platform_crud.py  role_crud.py  search_crud.py  source_connector_crud.py  team_crud.py  token_counts_crud.py  tool_crud.py  user_crud.py  user_follow_crud.py  vanna_trainings_crud.py  workflow_crud.py  workspace_crud.py  workspace_tool_crud.py
amplifi-dev/backend/app/app/db/: connection_handler.py  init_db.py  session.py
amplifi-dev/backend/app/app/models/: __init__.py  agent_model.py  agent_tools_model.py  api_client_model.py  audit_log_model.py  aws_s3_storage_model.py  azure_fabric_model.py  azure_storage_model.py  base_uuid_model.py  chat_app_datsets_model.py  chat_app_generation_config_model.py  chat_app_model.py  chat_history_model.py  chat_session_model.py  chunking_config_model.py  databricks_info.py  dataset_file_link_model.py  dataset_model.py  destination_model.py  document_chunk_model.py  document_model.py  embeddingConfig_model.py  extracted_entity_model.py  file_ingestion_model.py  file_model.py  file_split_model.py  graph_extraction_model.py  graph_model.py  groove_source_model.py  group_model.py  hero_model.py  image_media_model.py  links_model.py  mcp_tools.py  media_model.py  mysql_source_model.py  organization_model.py  pg_vector_info.py  pg_vector_model.py  platform_model.py  (+20 more)
amplifi-dev/backend/app/app/schemas/: agent_schema.py  api_client_schema.py  chat_schema.py  chunking_config_response_schema.py  chunking_config_schema.py  common_schema.py  connection_status_schema.py  dataset_schema.py  destination_schema.py  document_schema.py  embeddingConfig_schema.py  eval_schema.py  file_metadata_schema.py  file_schema.py  graph_schema.py  group_schema.py  hero_schema.py  image_media_schema.py  image_processing_resp_schema.py  ingest_request_schema.py  long_task_schema.py  mcp_schema.py  md_extraction_schema.py  media_schema.py  mfa_schema.py  organization_schema.py  passwordResetSchema.py  platform_schema.py  rag_generation_schema.py  refresh_token_schema.py  response_schema.py  role_schema.py  search_schema.py  source_schema.py  synth_data_schema.py  team_schema.py  token_counts_schema.py  token_schema.py  tool_schema.py  user_follow_schema.py  (+6 more)
amplifi-dev/backend/app/app/utils/: agent_prompts.py  agent_utils.py  csv_export_utils.py  csv_parser.py  datetime_utils.py  destination_writer.py  docling_model_manager.py  document_processing_utils.py  feature_flags.py  file_splitter.py  image_processing_utils.py  ingestion_benchmark.py  ingestion_status_propagation.py  ingestion_utils.py  ingestion_utils_v2.py  logfire_config.py  mcp_server_manager.py  openai_utils.py  optional_params.py  processing_lock_utils.py  requestvars.py  robust_completion_checker.py  snowflake.py  startup_video_models.py  tool_converter.py  tool_validator.py  (+6 more)
amplifi-dev/backend/app/load-test/: README.md  script.js
amplifi-dev/backend/app/test/: conftest.py  test_main.py  test_search_eval_task.py
(+485 files in other folders)
