[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "azure-storage-blob>=12.26.0",
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "cryptography>=46.0.1",
    "fastapi[all]>=0.117.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "poetry>=2.2.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pyjwt[crypto]>=2.10.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "tenacity>=9.1.2",
    "tzdata>=2025.2",
    "uvicorn>=0.36.0",
]
