[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "azure-storage-blob>=12.24.0",
    "bcrypt>=4.1.1",
    "celery>=5.3.6",
    "cryptography>=43.0.1",
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.1.4",
    "pdfplumber>=0.11.5",
    "pillow>=10.0.0",
    "poetry>=2.2.1",
    "psycopg2-binary>=2.9.5",
    "pydantic>=2.11.9",
    "pyjwt[crypto]>=2.8.0",
    "redis==5.0.4",
    "requests>=2.31.0",
    "sqlmodel==0.0.16",
    "tenacity>=9.0.0",
    "tzdata>=2023.3",
    "uvicorn>=0.27.0",
]
