[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.117.1",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.37.0",
]
